attached_assets/Pasted-python-test-all-fixes-py-workspace-python-test-all-fixes-py-RUNNING-ALL-FIX-VALIDATION-TESTS-1752972584906_1752972584906.txt
python test_all_fixes.py
~/workspace$ python test_all_fixes.py
🚀 RUNNING ALL FIX VALIDATION TESTS
==================================================

🧪 USDC Address Fix
------------------------------
🏦 Testing USDC Address Fix...
   ❌ Syntax error detected:   File "arbitrum_testnet_agent.py", line 1329
    ```python
    ^
SyntaxError: invalid syntax

   🔧 Attempting to auto-fix common syntax issues...
   ⚠️ USDC Address Fix: NEEDS ATTENTION

🧪 JSON Serialization Fix
------------------------------
📄 Testing JSON Serialization Fix...
   ✅ JSON serialization module syntax OK
   ✅ Decimal serialization working correctly
   🎯 JSON Serialization Fix: SUCCESS

🧪 Contract Validation
------------------------------
🔍 Testing Contract Validation...
   ✅ Contract validator syntax OK
   ❌ Syntax error:   File "arbitrum_testnet_agent.py", line 1329
    ```python
    ^
SyntaxError: invalid syntax

   ⚠️ Contract Validation: NEEDS ATTENTION

🧪 Enhanced System Validator
------------------------------
🔧 Testing Enhanced System Validator...
   ✅ Enhanced validator syntax OK
   ❌ Syntax error:   File "arbitrum_testnet_agent.py", line 1329
    ```python
    ^
SyntaxError: invalid syntax

   ⚠️ Enhanced System Validator: NEEDS ATTENTION

🧪 Borrow Diagnostic Tool
------------------------------
🏥 Testing Borrow Diagnostic Tool...
   ✅ Borrow diagnostic tool syntax OK
   ❌ Borrow diagnostic test failed: invalid syntax (arbitrum_testnet_agent.py, line 1329)
   ⚠️ Borrow Diagnostic Tool: NEEDS ATTENTION

==================================================
📊 TEST SUMMARY
==================================================
❌ FAILED: USDC Address Fix
✅ PASSED: JSON Serialization Fix
❌ FAILED: Contract Validation
❌ FAILED: Enhanced System Validator
❌ FAILED: Borrow Diagnostic Tool

🎯 OVERALL: 1/5 tests passed
❌ CRITICAL ISSUES - Major fixes needed

🔧 SYSTEM NEEDS MORE FIXES
   Review failed tests and apply fixes
~/workspace$ 
